crates/vexor-compiler/tests/golden/error/input/circle_arity.vx
// too many arguments
let c = Circle(10, 20)
export c
